--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ h1, h2, h3, h4 {
 h1 { font-size: calc(var(--type-base) * 2.2); }
 h2 { font-size: calc(var(--type-base) * 1.6); }
 h3 { font-size: calc(var(--type-base) * 1.25); }
-
+h4 {margin-bottom: .75rem;}
 
 nav {
     display: flex;
